--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Delivery Cost Calculator index.html page</title>
 </head>
 <body>
-Hello world from jeremypunsalan.com
+Hello world from jeremypunsalan.com; Updated from CICD HIHI
 </body>
 </html>
